Revision history HTML::Lint and Test::HTML::Lint.

2.04    Mon Jun  2 10:47:11 CDT 2008
        [FIXES]
        <textarea> now knows about the wrap attribute.

        [INTERNALS]
        Lots of enhancements pointed out by Perl::Critic.


2.02    Thu Nov  3 11:49:18 CST 2005
        [ENHANCEMENTS]
        * The warnings for missing ALT and HEIGHT/WIDTH on your images
          now give the SRC attribute.

2.00    Tue Sep 20 23:10:39 CDT 2005
        [CHANGES THAT COULD BREAK YOUR CODE]
        * I've changed the object structure.  HTML::Lint now has-a
          HTML::Parser, and no longer is-a HTML::Parser.

        * weblint-cgi and weblint-original are no longer distributed
          with HTML::Lint.

        * Now requires Perl 5.6.0.

        [FIXES]
        * Line numbering is now correct if you parse more than one file.

        * Changed t/*.*.t so that they only had one period in the
          filename. Apparently VMS doesn't like filenames with multiple
          dots.

1.30    December 3, 2004
        [ENHANCEMENTS]
        * Added handling for <HTML xmlns=... xml:lang=...>

        * Fixed <EMBED pluginspace=...>

        * Added handling of <EMBED quality=... and play=...>

1.28    January 27, 2004
        [ENHANCEMENTS]
        * Added support for the <EMBED> tag.

        [INTERNALS]
        * Added more POD coverage.

1.26    December 23, 2003
        [FIXES]
        * Fixed warnings if a lint error was found in the first column
          of the input file.  Thanks, Adam Monsen.

1.25    December 19, 2003
        [ENHANCEMENTS]
        * html_ok() clears the HTML::Lint object that gets passed
          in, if any.  Thanks to Cees Hek.

        [INTERNALS]
        * Ran everything through Devel::Cover to see what wasn't
          getting exercised.
        * Removed _element_stack() which was never used.
        * Error.pm's internals now eat their own dog food of methods,
          rather than accessing internals directly.