@@ -43,11 +43,10 @@ if ( $ExtUtils::MakeMaker::VERSION =~ /^\d\.\d\d$/ and $ExtUtils::MakeMaker::VER
 if ( $ExtUtils::MakeMaker::VERSION ge '6.36' ) {
     $parms{EXTRA_META} = <<EOF;
 resources:
-    homepage: http://petdance.com/ack/
-    bugtracker: http://code.google.com/p/ack/issues/list
+    homepage: http://search.cpan.org/dist/html-lint
+    bugtracker: http://code.google.com/p/html-lint/issues/list
     license: http://dev.perl.org/licenses/
-    Repository: http://code.google.com/p/ack/source
-    MailingList: http://groups.google.com/group/ack-users
+    Repository: http://code.google.com/p/html-lint/source
 EOF
     }
 
