@@ -477,13 +477,9 @@ sub _start_img {
 
 =head1 BUGS, WISHES AND CORRESPONDENCE
 
-Please feel free to email me at andy@petdance.com.  I'm glad to help as
-best I can, and I'm always interested in bugs, suggestions and patches.
-
-Please report any bugs or feature requests to
-C<< <bug-html-lint at rt.cpan.org> >>, or through the web interface at
-L<http://rt.cpan.org>.  I will be notified, and then you'll automatically
-be notified of progress on your bug as I make changes.
+All bugs and requests are now being handled through the Google
+Code issue tracker at http://code.google.com/p/html-lint/issues/list.
+DO NOT send bug reports to http://rt.cpan.org/
 
 =head1 TODO
 
